--- a/index.html
+++ b/index.html
@@ -1,132 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Levale</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS  -->
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
+    <!-- Fontawesome Icon  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Swipper Slider Css  -->
+    <link rel="stylesheet" href="assets/css/swiper-slider.css" />
+    <!-- Theme Css  -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+  </head>
 
-<head>
-  <title>Levale</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Bootstrap CSS  -->
-  <link rel="stylesheet" href="assets/css/bootstrap.css" />
-  <!-- Fontawesome Icon  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Swipper Slider Css  -->
-  <link rel="stylesheet" href="assets/css/swiper-slider.css" />
-  <!-- Theme Css  -->
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/responsive.css" />
-</head>
-
-<body>
-  <header>
+  <body>
+    <header>
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg theme__navbar py-lg-4 py-sm-3 py-2">
         <div class="container d-flex align-items-center">
-            
-            <!-- Left: Logo -->
-            <a class="navbar-brand fw-bold me-auto" href="#">LEVALE</a>
+          <!-- Left: Logo -->
+          <a class="navbar-brand fw-bold me-auto" href="#">LEVALE</a>
 
-            <!-- Toggler -->
-             <div class="mobile__toggler d-flex align-items-center gap-2">
-                <div class="search-toggle ms-auto d-block d-lg-none">
-                    <i class="fas fa-search"></i>
-                </div>
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
-                 </button>
-             </div>
+          <!-- Toggler -->
+          <div class="mobile__toggler d-flex align-items-center gap-2">
+            <div class="search-toggle ms-auto d-block d-lg-none">
+              <i class="fas fa-search"></i>
+            </div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <i class="fa-solid fa-bars original__icon"></i>
+              <i class="fa-solid fa-close close__icon"></i>
+            </button>
+          </div>
 
-            <!-- Center: Menu -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <!-- Center: Menu -->
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Explore</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Levale</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Explore</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Levale</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             </ul>
-            </div>
+          </div>
 
-            <!-- Right: Search -->
-            <div class="search-toggle ms-auto d-none d-lg-block">
+          <!-- Right: Search -->
+          <div class="search-toggle ms-auto d-none d-lg-block">
             <i class="fas fa-search"></i>
-            </div>
-
+          </div>
         </div>
       </nav>
 
       <!-- Fullscreen Search Overlay -->
       <div class="search-overlay" id="searchOverlay">
         <span class="search-close" id="searchClose">&times;</span>
-        <input type="text" placeholder="Type to search..." />
+        <form action="shop.html">
+          <input type="text" name="s" placeholder="Type to search..." />
+          <button class="btn search__form_btn">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
       </div>
     </header>
 
-
-  
-  <section class="hero" style="background-image: url(assets/imgs/Hero.jpg);">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 py-5 my-5">
-          <div class="hero__data_wrapper">
-            <h2 class="theme__sub_heading hero__heading">Elevate<span>Your Mobile</span>Experience</h2>
-            <a class="btn theme__btn hero__btn">Buy Now</a>
+    <section class="hero" style="background-image: url(assets/imgs/Hero.jpg)">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 py-5 my-5">
+            <div class="hero__data_wrapper">
+              <h2 class="theme__sub_heading hero__heading">
+                Elevate<span>Your Mobile</span>Experience
+              </h2>
+              <a class="btn theme__btn hero__btn">Buy Now</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <main>
-
-    <div class="container page__content mt-5 pt-4">
-
-    <section class="section hot__products">
-        <h2 class="hot__products_title">Hot Products</h2>
-
-        <a href="#" class="home__product_wrapper">
-          <div class="home__product">
-            <div class="home__product_data">
-              <p class="subheading">Premium Condition</p>
-              <h3 class="heading">iPhone 17 air</h3>
-            </div>
-            <img src="assets/imgs/pixel.png" alt="">
-
-          </div>
-        </a>
-        <a href="#" class="home__product_wrapper">
-          <div class="home__product">
-            <div class="home__product_data">
-              <p class="subheading">Premium Condition</p>
-              <h3 class="heading">Samsung Galaxy Note 20 Ultra</h3>
-            </div>
-            <img src="assets/imgs/samsung.png" alt="">
-
-          </div>
-        </a>
-        <a href="#" class="home__product_wrapper">
-          <div class="home__product">
-            <div class="home__product_data">
-              <p class="subheading">Good Condition</p>
-              <h3 class="heading">iPhone 15 Pro <span>Max</span></h3>
-            </div>
-            <img src="assets/imgs/iphone.png" alt="">
-
-          </div>
-        </a>
     </section>
+    <main>
+      <div class="container page__content mt-5 pt-4">
+        <section class="section hot__products">
+          <h2 class="hot__products_title">Hot Products</h2>
 
-    <section class="section explore__products">
-        <a href="#">
-          <img src="assets/imgs/Explore-All-Products.png" alt="" class="explore__products_img img-fluid">
-        </a>
-    </section>
+          <a href="#" class="home__product_wrapper">
+            <div class="home__product">
+              <div class="home__product_data">
+                <p class="subheading">Premium Condition</p>
+                <h3 class="heading">iPhone 17 air</h3>
+              </div>
+              <img src="assets/imgs/pixel.png" alt="" />
+            </div>
+          </a>
+          <a href="#" class="home__product_wrapper">
+            <div class="home__product">
+              <div class="home__product_data">
+                <p class="subheading">Premium Condition</p>
+                <h3 class="heading">Samsung Galaxy Note 20 Ultra</h3>
+              </div>
+              <img src="assets/imgs/samsung.png" alt="" />
+            </div>
+          </a>
+          <a href="#" class="home__product_wrapper">
+            <div class="home__product">
+              <div class="home__product_data">
+                <p class="subheading">Good Condition</p>
+                <h3 class="heading">iPhone 15 Pro <span>Max</span></h3>
+              </div>
+              <img src="assets/imgs/iphone.png" alt="" />
+            </div>
+          </a>
+        </section>
 
-    </div>
-
-  </main>
+        <section class="section explore__products">
+          <a href="#">
+            <img
+              src="assets/imgs/Explore-All-Products.png"
+              alt=""
+              class="explore__products_img img-fluid"
+            />
+          </a>
+        </section>
+      </div>
+    </main>
     <!-- Footer -->
     <footer>
       <div class="container footer__container">
@@ -168,9 +190,15 @@
           <!-- Contact -->
           <div class="col-lg-3 col-md-12 col-sm-6 mb-4 footer__column">
             <h6 class="desc__label">Contact</h6>
-            <p class="footer__p"><i class="fab fa-whatsapp"></i> +46 76 949 63 58</p>
-            <p class="footer__p"><i class="fas fa-phone"></i> +46 76 949 63 58</p>
-            <p class="footer__p"><i class="fas fa-envelope"></i> ali.usama@levale.se</p>
+            <p class="footer__p">
+              <i class="fab fa-whatsapp"></i> +46 76 949 63 58
+            </p>
+            <p class="footer__p">
+              <i class="fas fa-phone"></i> +46 76 949 63 58
+            </p>
+            <p class="footer__p">
+              <i class="fas fa-envelope"></i> ali.usama@levale.se
+            </p>
 
             <h6 class="desc__label mt-5">Follow us</h6>
             <div class="social-icons">
@@ -184,16 +212,14 @@
       </div>
     </footer>
 
-
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="assets/js/bootstrap-pooper.js"></script>
-  <script src="assets/js/bootstrap-main.js"></script>
-  <!-- Swiper Slider JS -->
-  <script src="assets/js/swiper-slider.js"></script>
-  <!-- Scroll Reveal JS -->
-  <script src="assets/js/scrollreveal.min.js"></script>
-  <!-- Theme JS -->
-  <script src="assets/js/script.js"></script>
-</body>
-
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="assets/js/bootstrap-pooper.js"></script>
+    <script src="assets/js/bootstrap-main.js"></script>
+    <!-- Swiper Slider JS -->
+    <script src="assets/js/swiper-slider.js"></script>
+    <!-- Scroll Reveal JS -->
+    <script src="assets/js/scrollreveal.min.js"></script>
+    <!-- Theme JS -->
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
