--- a/product-detail-page.html
+++ b/product-detail-page.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header>
+      <header>
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg theme__navbar py-lg-4 py-sm-3 py-2">
         <div class="container d-flex align-items-center">
@@ -34,14 +34,15 @@
                     <i class="fas fa-search"></i>
                 </div>
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
+                 <i class="fa-solid fa-bars original__icon"></i>
+                 <i class="fa-solid fa-close close__icon"></i>
                  </button>
              </div>
 
             <!-- Center: Menu -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Explore</a></li>
@@ -61,7 +62,10 @@
       <!-- Fullscreen Search Overlay -->
       <div class="search-overlay" id="searchOverlay">
         <span class="search-close" id="searchClose">&times;</span>
-        <input type="text" placeholder="Type to search..." />
+        <form action="shop.html">
+        <input type="text" name="s" placeholder="Type to search..." />
+        <button class="btn search__form_btn"><i class="fas fa-search"></i></button>
+        </form>
       </div>
     </header>
 
