--- a/compare.html
+++ b/compare.html
@@ -28,42 +28,57 @@
   <body>
     <header>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg theme__navbar py-lg-4 py-sm-3 py-2">
-        <div class="container d-flex align-items-center">
-            
-            <!-- Left: Logo -->
-            <a class="navbar-brand fw-bold me-auto" href="#">LEVALE</a>
+    <nav class="navbar navbar-expand-lg theme__navbar py-lg-4 py-sm-3 py-2">
+      <div class="container d-flex align-items-center">
+        <!-- Left: Logo -->
+        <a class="navbar-brand fw-bold me-auto" href="#">LEVALE</a>
 
-            <!-- Toggler -->
-             <div class="mobile__toggler d-flex align-items-center gap-2">
-                <div class="search-toggle ms-auto d-block d-lg-none">
-                    <i class="fas fa-search"></i>
-                </div>
-                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                 <i class="fa-solid fa-bars original__icon"></i>
-                 <i class="fa-solid fa-close close__icon"></i>
-                 </button>
-             </div>
-
-            <!-- Center: Menu -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Explore</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Levale</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            </ul>
-            </div>
-
-            <!-- Right: Search -->
-            <div class="search-toggle ms-auto d-none d-lg-block">
+        <!-- Toggler -->
+        <div class="mobile__toggler d-flex align-items-center gap-2">
+          <div class="search-toggle ms-auto d-block d-lg-none">
             <i class="fas fa-search"></i>
-            </div>
-
+          </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars original__icon"></i>
+            <i class="fa-solid fa-close close__icon"></i>
+          </button>
         </div>
-      </nav>
+
+        <!-- Center: Menu -->
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown brand-dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button">
+                Products
+              </a>
+              <div class="dropdown-menu brand-menu" aria-labelledby="productsDropdown">
+                <div class="brand-grid">
+                  <a href="#" class="nav-link brand-card">Apple</a>
+                  <a href="#" class="nav-link brand-card">Samsung</a>
+                  <a href="#" class="nav-link brand-card">Google</a>
+                  <a href="#" class="nav-link brand-card">OnePlus</a>
+                  <a href="#" class="nav-link brand-card">Xiaomi</a>
+                </div>
+              </div>
+            </li>
+
+            <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Explore</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Levale</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          </ul>
+        </div>
+
+        <!-- Right: Search -->
+        <div class="search-toggle ms-auto d-none d-lg-block">
+          <i class="fas fa-search"></i>
+        </div>
+      </div>
+    </nav>
 
       <!-- Fullscreen Search Overlay -->
       <div class="search-overlay" id="searchOverlay">
